# HaskellReact

./: haskellreact.cabal
app/: Main.hs
