name:                haskellreact
version:             0.1.0.0
synopsis:            Project for a react like haskell library
description:         Please see README.md
homepage:            https://github.com/githubuser/helloworld#readme
license:             BSD3
license-file:        LICENSE
author:              Ethan Steinberg
maintainer:          ethan.steinberg@gmail.com
copyright:           2016 Ethan Steinberg
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable helloworld-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gtk
                     , lens
                     , containers
                     , haskellreact
  default-language:    Haskell2010

test-suite helloworld-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haskellreact
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/helloworld
